--- a/themes/default/templates/layout.html
+++ b/themes/default/templates/layout.html
@@ -28,7 +28,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-6">
-          <a href="{{config.base_url}}/" class="logo">{{config.site_title}}</a>
+          <a href="{{config.base_url}}/" class="logo">Power Almanac Documentation</a>
         </div>
         <div class="col-sm-6">
           {{#config.googleoauth}}
